# NAI-repo

./: CMakeLists.txt  README.md
Lab1/: main.cpp
Lab11/: CMakeLists.txt  main.cpp
Lab7/: CMakeLists.txt  main.cpp
Lab7Extra/: main.py
NAI/: CMakeLists.txt
NAI/LAB 1/: main.cpp
lab 11 extra/: main.cpp
lab9/: CMakeLists.txt  main.cpp
